--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
 
         <activity
-            android:name=".MapActivity"
+            android:name=".map.MapActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
