화면 비율, 지도 초기위치

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         <meta-data
             android:name="com.kakao.vectormap.KAKAO_MAP_KEY"
             android:value="KAKAO_MAP_KEY" />
+
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
     </application>
 
 </manifest>
